Javadoc plugin fix